syntax = "proto3";
option go_package = "./;confproto";

package confproto;


// Define the student service
service Student {
    rpc GetStudent(StudentRequest) returns (StudentResponse);
}


// The student request message
message StudentRequest {
    string name = 1;
    int32 age = 3;
    string faculty = 2;
    Discipline discipline = 4;
}


enum Discipline {
    swimming = 0;
    boxing = 1;
    athletics = 2;
}

message StudentResponse {
    bool success = 1;
}